fixed position of the upload__submit and upload__reset buttons on tablet view

--- a/sass/blocks/upload.scss
+++ b/sass/blocks/upload.scss
@@ -115,12 +115,14 @@
     width: 86.667%;
     margin-top: 64px;
     margin-right: 13px;
+    margin-left: 27px;
   }
 
   .upload__reset {
     width: 86.667%;
     margin-top: 27px;
     margin-right: 13px;
+    margin-left: 27px;
   }
 }
 
@@ -150,6 +152,7 @@
     width: 183px;
     margin-top: 143px;
     margin-right: 44px;
+    margin-left: 0;
 
     font-size: 18px;
     letter-spacing: normal;
@@ -159,6 +162,7 @@
     width: 183px;
     margin-top: 143px;
     margin-right: 0;
+    margin-left: 0;
 
     font-size: 18px;
     letter-spacing: normal;
